@@ -2,6 +2,6 @@ name    = Plack-Session-Store-MongoDB
 author  = Ido Perlmuter <ido@ido50.net>
 license = Perl_5
 copyright_holder = Ido Perlmuter
-copyright_year   = 2010
+copyright_year   = 2014
 
 [@IDOPEREL]
